dockerregistry.yml
apiVersion: v1
kind: Pod
metadata:
   name: mynginxpod1
spec:
   imagePullSecrets:
    - name: mydockerhubsecret
   containers:
    - image: shreyakale907/mynginx
      name: mynginxcontainer
      ports:
        - containerPort: 80
