labelpod1.yml
apiVersion: v1
kind: Pod
metadata:
   name: mynginxpod
   labels: 
      env: live
spec:
   nodeSelector:
       gpu: "true"
   containers:
    - image: nginx
      name: mynginxcontainer
      ports:
        - containerPort: 80
          hostPort: 80
