nfs.yml
apiVersion: v1
kind: Pod
metadata:
   name: gitrepowalappod
spec:
   containers:
      - image: nginx
        name: ngcontainer
        volumeMounts:
              - name: htmlfolder
                mountPath: /usr/share/nginx/html
                readOnly: true
        ports:
         - containerPort: 80
           protocol: TCP
   volumes:
    - name: htmlfolder
      nfs:
        server: "fs-0060cf826aab74865.efs.ap-south-1.amazonaws.com"
        path: /test
