statefulwala.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
     name: mysfpod
spec:
  replicas: 5
  selector:
      matchLabels:
        app: development
  template:
    metadata:
       labels:
         app: development
    spec:
     containers:
           - image: mysql
             name: mysqlcontainer
             ports:
               - containerPort: 3306
             volumeMounts:
               - name: mysqlstorage
                 mountPath: /var/lib/mysql
  volumeClaimTemplates:
            - metadata:
                name: mysqlstorage
              spec:
                accessModes: ["ReadWriteOnce"]
                resources:
                      requests:
                         storage: 2Gi
                selector: 
                    matchLables:
                       type: awspv
